name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GinBaby/fingerd#readme
license:             MIT
license-file:        LICENSE
author:              Julie Moronuki
maintainer:          argumatron@gmail.com
copyright:           2017 Julie Moronuki
category:            oldskool
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:        -Wall
  hs-source-dirs:     src
  main-is:            Debug.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , network

executable fingerd
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
